--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "google-trends-api": "^4.9.0"
+    "google-trends-api": "^4.9.0",
+    "jsonstat-toolkit": "^1.0.8",
+    "lodash": "^4.17.20"
   }
 }
